# electrolyser

./: .gitignore  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile  alembic.ini  config.py  etl.py  prefect.Dockerfile  pyproject.toml
backend/alembic/: database.sql  env.py
backend/alembic/versions/: 0e5e9e4a570d_add_unique_constraint.py  3ae937608294_add_audit_timestamp.py  93a0cd33097d_create_wind_power_view.py  cf3db07e76cf_initial.py
backend/db_models/: weather.py
backend/dbt_electrolyser/: .user.yml  dbt_project.yml  packages.yml  profiles.yml
backend/dbt_electrolyser/models/: schema.yml  sources.yml
backend/dbt_electrolyser/models/marts/: fct_power_generation.sql
backend/dbt_electrolyser/models/staging/: stg_weather.sql  stg_weather_physics.sql
backend/src/: api.py  config.py  database.py  etl.py  main.py
backend/src/clients/: openweather.py
backend/src/models/: air.py  wind.py
backend/src/sql/: v_wind_power.sql
backend/tests/: test_openweather.py
clients/: openweather.py
data/: electrolyser_lut.csv
frontend/: Dockerfile  dash_chart.py  main.py  pyproject.toml
frontend/src/: dash_chart.py  main.py
models/: air.py  wind.py
