[project]
name = "electrolyser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "alembic>=1.17.2",
    "hishel[fastapi,httpx]>=1.1.7",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "prefect[sqlalchemy]>=3.6.10",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyzmq>=27.1.0",
    "sqlmodel>=0.0.31",
]

[dependency-groups]
dev = [
    "icecream>=2.1.8",
    "marimo>=0.18.4",
    "openai>=2.15.0",
    "pytest>=9.0.2",
]
viz = [
    "dash>=3.3.0",
    "matplotlib>=3.10.8",
    "plotly>=6.5.0",
]

[tool.pytest]
testpaths = [
    "tests",
]

[tool.uv.workspace]
members = [
    "electrolyser_frontend",
]
